--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,12 @@ aiohttp==3.8.4
 aiosignal==1.3.1
 async-timeout==4.0.2
 attrs==23.1.0
+beautifulsoup4==4.12.2
 cachetools==5.3.0
 certifi==2022.12.7
 charset-normalizer==3.1.0
 dnspython==2.3.0
+et-xmlfile==1.1.0
 frozenlist==1.3.3
 google-api-core==2.11.0
 google-api-python-client==2.86.0
@@ -18,6 +20,8 @@ loguru==0.7.0
 multidict==6.0.4
 numpy==1.24.2
 openai==0.27.2
+openpyxl==3.1.2
+pandas==2.0.1
 pinecone-client==2.2.1
 protobuf==4.22.3
 pyasn1==0.5.0
@@ -25,12 +29,18 @@ pyasn1-modules==0.3.0
 pyparsing==3.0.9
 python-dateutil==2.8.2
 python-dotenv==1.0.0
+pytz==2023.3
 PyYAML==6.0
+regex==2023.3.23
 requests==2.28.2
 rsa==4.9
 six==1.16.0
+soupsieve==2.4.1
+termcolor==2.3.0
+tiktoken==0.3.3
 tqdm==4.65.0
 typing_extensions==4.5.0
+tzdata==2023.3
 uritemplate==4.1.1
 urllib3==1.26.15
 yarl==1.9.1
