--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 aiofiles==23.1.0
 aiohttp==3.8.4
 aiosignal==1.3.1
+alembic==1.11.1
 anyio==3.6.2
 async-timeout==4.0.2
 attrs==23.1.0
@@ -18,11 +19,14 @@ google-api-python-client==2.86.0
 google-auth==2.17.3
 google-auth-httplib2==0.1.0
 googleapis-common-protos==1.59.0
+greenlet==2.0.2
 h11==0.14.0
 httplib2==0.22.0
 httptools==0.5.0
 idna==3.4
 loguru==0.7.0
+Mako==1.2.4
+MarkupSafe==2.1.2
 multidict==6.0.4
 numpy==1.24.2
 openai==0.27.2
@@ -30,6 +34,7 @@ openpyxl==3.1.2
 pandas==2.0.1
 pinecone-client==2.2.1
 protobuf==4.22.3
+psycopg2-binary==2.9.6
 pyasn1==0.5.0
 pyasn1-modules==0.3.0
 pydantic==1.10.7
@@ -44,6 +49,7 @@ rsa==4.9
 six==1.16.0
 sniffio==1.3.0
 soupsieve==2.4.1
+SQLAlchemy==2.0.13
 starlette==0.26.1
 termcolor==2.3.0
 tiktoken==0.3.3
