--- a/ResearchGPT/requirements.txt
+++ b/ResearchGPT/requirements.txt
@@ -2,6 +2,7 @@ aiofiles==23.1.0
 aiohttp==3.8.4
 aiosignal==1.3.1
 anyio==3.6.2
+asn1crypto==1.5.1
 async-timeout==4.0.2
 attrs==23.1.0
 beautifulsoup4==4.12.2
@@ -31,6 +32,7 @@ numpy==1.24.2
 openai==0.27.2
 openpyxl==3.1.2
 pandas==2.0.1
+pg8000==1.29.5
 protobuf==4.22.3
 psycopg2-binary==2.9.6
 pyasn1==0.5.0
@@ -44,6 +46,7 @@ PyYAML==6.0
 regex==2023.3.23
 requests==2.28.2
 rsa==4.9
+scramp==1.4.4
 six==1.16.0
 sniffio==1.3.0
 soupsieve==2.4.1
