--- a/ResearchWeb/package.json
+++ b/ResearchWeb/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "vue": "^3.2.47",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.1",
