--- a/ResearchGPT/requirements.txt
+++ b/ResearchGPT/requirements.txt
@@ -6,11 +6,13 @@ asn1crypto==1.5.1
 async-timeout==4.0.2
 attrs==23.1.0
 beautifulsoup4==4.12.2
+Brotli==1.0.9
 cachetools==5.3.0
 certifi==2022.12.7
 charset-normalizer==3.1.0
 click==8.1.3
 dnspython==2.3.0
+duckduckgo-search==3.8.3
 et-xmlfile==1.1.0
 fastapi==0.95.1
 frozenlist==1.3.3
@@ -21,11 +23,18 @@ google-auth-httplib2==0.1.0
 googleapis-common-protos==1.59.0
 greenlet==2.0.2
 h11==0.14.0
+h2==4.1.0
+hpack==4.0.0
+httpcore==0.17.2
 httplib2==0.22.0
 httptools==0.5.0
+httpx==0.24.1
+hyperframe==6.0.1
 idna==3.4
 loguru==0.7.0
+lxml==4.9.2
 Mako==1.2.4
+Markdown==3.4.3
 MarkupSafe==2.1.2
 multidict==6.0.4
 numpy==1.24.2
@@ -40,6 +49,7 @@ pyasn1-modules==0.3.0
 pydantic==1.10.7
 pyparsing==3.0.9
 python-dateutil==2.8.2
+python-docx==0.8.11
 python-dotenv==1.0.0
 pytz==2023.3
 PyYAML==6.0
@@ -47,8 +57,10 @@ regex==2023.3.23
 requests==2.28.2
 rsa==4.9
 scramp==1.4.4
+secure-smtplib==0.1.1
 six==1.16.0
 sniffio==1.3.0
+socksio==1.0.0
 soupsieve==2.4.1
 SQLAlchemy==2.0.13
 starlette==0.26.1
